--- a/gpio.cabal
+++ b/gpio.cabal
@@ -31,6 +31,8 @@ Library
                       , GADTs
                       , TemplateHaskell
   Build-Depends:        base >= 4 && < 5
+                      , errors
+                      , exceptions
                       , free
                       , mtl
 
@@ -46,6 +48,8 @@ Test-Suite spec
                       , GADTs
                       , TemplateHaskell
   Build-Depends:        base
+                      , errors
+                      , exceptions
                       , free
                       , hspec
                       , mtl
