--- a/gpio.cabal
+++ b/gpio.cabal
@@ -35,6 +35,7 @@ Library
                       , exceptions
                       , free
                       , mtl
+                      , transformers
 
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
@@ -53,6 +54,7 @@ Test-Suite spec
                       , free
                       , hspec
                       , mtl
+                      , transformers
   Other-modules:        System.GPIO
                       , System.GPIO.Free
                       , System.GPIO.Linux.Sysfs
