--- a/gpio.cabal
+++ b/gpio.cabal
@@ -31,6 +31,7 @@ Library
                       , GADTs
                       , TemplateHaskell
   Build-Depends:        base >= 4 && < 5
+                      , containers
                       , errors
                       , exceptions
                       , free
@@ -50,6 +51,7 @@ Test-Suite spec
                       , GADTs
                       , TemplateHaskell
   Build-Depends:        base
+                      , containers
                       , errors
                       , exceptions
                       , free
