First pass at a Linux sysfs interpreter.
Not yet tested and missing some edge case functionality, such as better
handling of file read/write exceptions. (This particular interpreter
will throw IOError's, but it should be relatively easy to write another
that expresses IO exceptions as Left values, for example.)

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -32,11 +32,13 @@ Library
                       , TemplateHaskell
   Build-Depends:        base >= 4 && < 5
                       , containers
+                      , directory
                       , errors
                       , exceptions
                       , filepath
                       , free
                       , mtl
+                      , strict
                       , text
                       , transformers
 
@@ -53,12 +55,14 @@ Test-Suite spec
                       , TemplateHaskell
   Build-Depends:        base
                       , containers
+                      , directory
                       , errors
                       , exceptions
                       , filepath
                       , free
                       , hspec
                       , mtl
+                      , strict
                       , text
                       , transformers
   Other-modules:        System.GPIO
