--- a/gpio.cabal
+++ b/gpio.cabal
@@ -16,7 +16,8 @@ Description:
   @gpio@ provides a DSL for controlling GPIO pins. Currently only
   Linux is supported (via the @sysfs@ filesystem).
 
-Extra-Source-Files:     README.md
+Extra-Doc-Files:        README.md
+Extra-Source-Files:     examples/*.hs
 
 Library
   Default-Language:     Haskell2010
