--- a/gpio.cabal
+++ b/gpio.cabal
@@ -40,6 +40,7 @@ Library
                       , System.GPIO.Mock
                       , System.GPIO.Free
                       , System.GPIO.Linux.Sysfs
+                      , System.GPIO.Linux.MonadSysfs
   Other-Extensions:     DeriveGeneric
                       , FlexibleContexts
                       , GADTs
@@ -82,6 +83,7 @@ Test-Suite spec
   Other-modules:        System.GPIO
                       , System.GPIO.Free
                       , System.GPIO.Linux.Sysfs
+                      , System.GPIO.Linux.MonadSysfs
 
 Source-Repository head
   Type:                 git
