First-pass attempt at a 'MockSysfs' monad.
Unlike most of the other types in the gpio package, 'MockSysfs' is
neither an interpreter nor a Free monad. Instead, it mimics all of the
filesystem operations performed by the 'SysfsT' interpreter/transformer,
so that you can use 'runSysfsT' and friends on platforms that don't
support the Linux sysfs GPIO interface, or in situations (e.g., testing)
where you want to run GPIO programs that don't need root access (which
is typically required to manipulate sysfs GPIO state on most Linux
systems).

Though it hasn't been integrated into the test framework yet (that will
come in a subsequent check-in), the idea is that 'MockSysfs' can be
dropped into the 'SysfsT' transformer stack and thereby replace the
actual sysfs I/O operations with its own mock operations, so that no
actual Linux sysfs GPIO implementation is needed to test the 'SysfsT'
program with a reasonable degree of certainty about its proper
operation (to the extent that 'MockSysfs' faithfully emulates the real
Linux sysfs GPIO interface, at least).

I believe this is a better approach to mocking/testing than the existing
one (the 'MockT' transformer), which implements a mock interpreter with
no underlying real-world GPIO implementation. In fact, once the
'MockSysfs' monad is integrated into the gpio package test framework, I
plan to remove the 'MockT' interpreter.

Among the reasons why I believe it's a good idea to remove 'MockT' and
replace it with 'MockSysfs':

* Prior to this check-in, there was no good way to test the 'SysfsT'
  interpreter. Currently, the gpio package test framework uses the
  'MockT' interpreter, which doesn't really test anything particularly
  useful, since the interpreter itself is never used for real-world
  programs, and because the test programs themselves are also not very
  interesting or useful outside the testing environment. About the only
  useful thing the 'MockT' interpreter provided was a way to "sound out"
  the development of 

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -40,12 +40,14 @@ Library
                       , System.GPIO.Mock
                       , System.GPIO.Free
                       , System.GPIO.Linux.Sysfs
+                      , System.GPIO.Linux.MockSysfs
                       , System.GPIO.Linux.MonadSysfs
   Other-Extensions:     DeriveGeneric
                       , FlexibleContexts
                       , GADTs
                       , TemplateHaskell
   Build-Depends:        base >= 4 && < 5
+                      , cond
                       , containers
                       , directory
                       , errors
@@ -69,6 +71,7 @@ Test-Suite spec
                       , GADTs
                       , TemplateHaskell
   Build-Depends:        base
+                      , cond
                       , containers
                       , directory
                       , errors
@@ -81,8 +84,10 @@ Test-Suite spec
                       , text
                       , transformers
   Other-modules:        System.GPIO
+                      , System.GPIO.Mock
                       , System.GPIO.Free
                       , System.GPIO.Linux.Sysfs
+                      , System.GPIO.Linux.MockSysfs
                       , System.GPIO.Linux.MonadSysfs
 
 Source-Repository head
