Beef up the GPIO basic types.
More useful 'deriving' clauses, and make 'PinValue' an instance of
'Bits' and 'FiniteBits' so it can be treated like a logical 0/1 value.

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -52,6 +52,7 @@ Library
                       , filepath
                       , free
                       , mtl
+                      , QuickCheck
                       , strict
                       , text
                       , transformers
@@ -77,6 +78,7 @@ Test-Suite spec
                       , free
                       , hspec
                       , mtl
+                      , QuickCheck
                       , strict
                       , text
                       , transformers
