--- a/gpio.cabal
+++ b/gpio.cabal
@@ -66,6 +66,17 @@ Executable gpio-sysfs-example
                       , transformers
   Default-Language:     Haskell2010
 
+Executable gpio-edgeread-example
+  Main-Is:              EdgeRead.hs
+  HS-Source-Dirs:       examples
+  Build-Depends:        base >= 4 && < 5
+                      , errors
+                      , gpio
+                      , mtl
+                      , optparse-applicative
+                      , transformers
+  Default-Language:     Haskell2010
+
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
   Default-Language:     Haskell2010
