--- a/gpio.cabal
+++ b/gpio.cabal
@@ -43,6 +43,8 @@ Library
                       , System.GPIO.Linux.Sysfs
                       , System.GPIO.Linux.SysfsIO
                       , System.GPIO.Linux.SysfsMock
+                      , System.GPIO.Linux.SysfsTypes
+                      , System.GPIO.Linux.SysfsUtil
                       , System.GPIO.Types
   Other-Extensions:     DeriveDataTypeable
                       , DeriveGeneric
@@ -121,6 +123,7 @@ Test-Suite spec
                       , System.GPIO.Linux.Sysfs
                       , System.GPIO.Linux.SysfsIO
                       , System.GPIO.Linux.SysfsMock
+                      , System.GPIO.Linux.SysfsTypes
                       , System.GPIO.Types
 
 Source-Repository head
