--- a/gpio.cabal
+++ b/gpio.cabal
@@ -39,12 +39,13 @@ Library
   Exposed-Modules:      System.GPIO
                       , System.GPIO.Free
                       , System.GPIO.Linux
-                      , System.GPIO.Linux.MonadSysfs
                       , System.GPIO.Linux.Sysfs
-                      , System.GPIO.Linux.SysfsIO
-                      , System.GPIO.Linux.SysfsMock
-                      , System.GPIO.Linux.SysfsTypes
-                      , System.GPIO.Linux.SysfsUtil
+                      , System.GPIO.Linux.Sysfs.Free
+                      , System.GPIO.Linux.Sysfs.IO
+                      , System.GPIO.Linux.Sysfs.Monad
+                      , System.GPIO.Linux.Sysfs.Mock
+                      , System.GPIO.Linux.Sysfs.Types
+                      , System.GPIO.Linux.Sysfs.Util
                       , System.GPIO.Types
   Other-Extensions:     DeriveDataTypeable
                       , DeriveGeneric
@@ -71,7 +72,7 @@ Library
                       , text
                       , transformers
                       , unix
-  C-Sources:            src/System/GPIO/Linux/SysfsIO.c
+  C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
   CC-Options:           -Wall -std=c11
 
 Executable gpio-sysfs-example
@@ -119,11 +120,13 @@ Test-Suite spec
   Other-modules:        System.GPIO
                       , System.GPIO.Free
                       , System.GPIO.Linux
-                      , System.GPIO.Linux.MonadSysfs
                       , System.GPIO.Linux.Sysfs
-                      , System.GPIO.Linux.SysfsIO
-                      , System.GPIO.Linux.SysfsMock
-                      , System.GPIO.Linux.SysfsTypes
+                      , System.GPIO.Linux.Sysfs.Free
+                      , System.GPIO.Linux.Sysfs.IO
+                      , System.GPIO.Linux.Sysfs.Monad
+                      , System.GPIO.Linux.Sysfs.Mock
+                      , System.GPIO.Linux.Sysfs.Types
+                      , System.GPIO.Linux.Sysfs.Util
                       , System.GPIO.Types
 
 Source-Repository head
