Now Sysfs.hs is the same as Gpio.hs, but with Sysfs.IO.
Closes #4.

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -81,6 +81,7 @@ Executable gpio-sysfs-example
   Build-Depends:        base ==4.*
                       , gpio
                       , mtl
+                      , optparse-applicative
                       , transformers
   Default-Language:     Haskell2010
   Ghc-Options:          -Wall -threaded
