Use raw fd's to write export/unexport sysfs files.
sysfs control files like /sys/class/gpio/{export,unexport} can safely be
written by multiple threads at the same time, but in Haskell, using
writeFile, they cannot, as Haskell imposes a single-writer lock around a
given file. We work around this by using the System.Posix.IO file
descriptor APIs.

Note that other files in /sysfs/class/gpio such as per-pin resources
will have a similar problem if multiple threads are trying to write them
at the same time. However, as those cases are dealing with an actual
per-pin resource, as opposed to a global control file, it's probably OK
to use Haskell's conservative model and require the user to implement
inter-thread synchronization if they want to have multiple threads
writing the same pin resource. Therefore, we only apply this special
case to export and unexport.

Closes #19.

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -56,6 +56,7 @@ Library
                       , KindSignatures
                       , LambdaCase
                       , OverloadedStrings
+                      , PackageImports
                       , QuasiQuotes
                       , TemplateHaskell
                       , TypeSynonymInstances
@@ -72,6 +73,7 @@ Library
                       , text
                       , transformers
                       , unix
+                      , unix-bytestring
   C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
   CC-Options:           -Wall -std=c11
 
@@ -118,6 +120,7 @@ Test-Suite spec
                       , text
                       , transformers
                       , unix
+                      , unix-bytestring
   Other-modules:        System.GPIO
                       , System.GPIO.Free
                       , System.GPIO.Linux
