--- a/gpio.cabal
+++ b/gpio.cabal
@@ -81,6 +81,7 @@ Executable gpio-sysfs-example
   Main-Is:              Sysfs.hs
   HS-Source-Dirs:       examples
   Build-Depends:        base ==4.*
+                      , async
                       , gpio
                       , mtl
                       , optparse-applicative
@@ -92,6 +93,7 @@ Executable gpio-example
   Main-Is:              Gpio.hs
   HS-Source-Dirs:       examples
   Build-Depends:        base ==4.*
+                      , async
                       , gpio
                       , mtl
                       , optparse-applicative
