Don't think we need C11 for generated C.
This should fix the build-with-gcc failures.

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -77,7 +77,7 @@ Library
                       , unix
                       , unix-bytestring
   C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
-  CC-Options:           -Wall -std=c11
+  CC-Options:           -Wall
 
 Executable gpio-sysfs-example
   Main-Is:              Sysfs.hs
