Support for base < 4.8.0.0.
Should make the package compatible with GHC 7.8.4.

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -53,7 +53,8 @@ Library
                       , System.GPIO.Linux.Sysfs.Types
                       , System.GPIO.Linux.Sysfs.Util
                       , System.GPIO.Types
-  Other-Extensions:     DeriveDataTypeable
+  Other-Extensions:     CPP
+                      , DeriveDataTypeable
                       , DeriveGeneric
                       , FlexibleContexts
                       , FlexibleInstances
