Port Sysfs example program to new implementation.

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -87,18 +87,18 @@ Library
   C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
   CC-Options:           -Wall
 
--- Executable gpio-sysfs-example
---   Main-Is:              Sysfs.hs
---   HS-Source-Dirs:       examples
---   Build-Depends:        base ==4.*
---                       , async
---                       , gpio
---                       , mtl
---                       , optparse-applicative
---                       , transformers
---                       , transformers-compat
---   Default-Language:     Haskell2010
---   Ghc-Options:          -Wall -threaded
+Executable gpio-sysfs-example
+  Main-Is:              Sysfs.hs
+  HS-Source-Dirs:       examples
+  Build-Depends:        base ==4.*
+                      , async
+                      , gpio
+                      , mtl
+                      , optparse-applicative
+                      , transformers
+                      , transformers-compat
+  Default-Language:     Haskell2010
+  Ghc-Options:          -Wall -threaded
 
 Executable gpio-example
   Main-Is:              Gpio.hs
