Allow nightly builds to fail in Travis CI.
[ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ addons:
 # matrix, you can use a line such as:
 #     addons: {apt: {packages: [libfcgi-dev,libgmp-dev]}}
 matrix:
+  allow_failures:
+  - env: ARGS="--resolver nightly"
   include:
   - env: ARGS=""
     compiler: ": # Default"
