--- a/gpio.cabal
+++ b/gpio.cabal
@@ -45,6 +45,7 @@ Library
                       , System.GPIO.Linux.Sysfs.Free
                       , System.GPIO.Linux.Sysfs.IO
                       , System.GPIO.Linux.Sysfs.Monad
+                      , System.GPIO.Linux.Sysfs.Mock
                       , System.GPIO.Linux.Sysfs.Native
                       , System.GPIO.Linux.Sysfs.Types
                       , System.GPIO.Linux.Sysfs.Util
@@ -140,6 +141,7 @@ Test-Suite spec
                       , System.GPIO.Linux.Sysfs.Free
                       , System.GPIO.Linux.Sysfs.IO
                       , System.GPIO.Linux.Sysfs.Monad
+                      , System.GPIO.Linux.Sysfs.Mock
                       , System.GPIO.Linux.Sysfs.Native
                       , System.GPIO.Linux.Sysfs.Types
                       , System.GPIO.Linux.Sysfs.Util
