Switch from 'Free' to mtl-style type classes.
After much deliberation, I've decided not to use free monads (nor any of
its variants, e.g., "extensible effects") to implement the interpreters
in this package. I was persuaded mainly by the performance arguments:
type classes are simply much more efficient (by at least a factor of
two) than any free monad/extensible effects implementation at the time
of writing.

Because most of the interpreters in the package aren't implemented on
top of any existing mtl class, they don't suffer from what I perceive to
be the primary drawback of mtl-style interpreters/type classes --
namely, the fact that using multiple instances of an mtl type class in a
given transformer stack is unwieldy/impossible (depending on whether
you're willing to turn on certain GHC extensions). Because most of the
interpreters here are stand-alone, application writers who use this
package can freely combine these interpreters with their own transformer
stacks and should not have to worry about conflicts or compositional
problems.

It appears to me that the chief complaints about mtl-style type class
interpreters are a) the amount of boilerplate required to make 'lift'ing
possible across the various mtl types, and b) a general unease about
defining type classes which lack laws. Regarding a), this is simply an
implementation issue which only affects the library writer, not the
library's users, and I am willing to do the manual lifting if it means
much better performance.

Regarding b), while I don't disagree with the feeling that it's a good
thing when type classes specify laws in order to provide some guidance
to instance writers about how a certain type class method should
behave (e.g., 'MonadReader' 'ask' should not modify its environment), I
think that in the case of interpreter-like type classes, because the
interpreters are generally so specialized to their problem
domains (unlike the universally useful mtl type classes, e.g.,
MonadReader), lack of law

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -39,16 +39,14 @@ Library
   HS-Source-Dirs:       src
   GHC-Options:          -Wall
   Exposed-Modules:      System.GPIO
-                      , System.GPIO.Free
                       , System.GPIO.Linux
                       , System.GPIO.Linux.Sysfs
-                      , System.GPIO.Linux.Sysfs.Free
                       , System.GPIO.Linux.Sysfs.IO
                       , System.GPIO.Linux.Sysfs.Monad
                       , System.GPIO.Linux.Sysfs.Mock
-                      , System.GPIO.Linux.Sysfs.Native
                       , System.GPIO.Linux.Sysfs.Types
                       , System.GPIO.Linux.Sysfs.Util
+                      , System.GPIO.Monad
                       , System.GPIO.Types
   Other-Modules:        System.GPIO.Linux.Sysfs.Mock.Internal
   Other-Extensions:     CPP
@@ -74,7 +72,6 @@ Library
                       , directory
                       , exceptions
                       , filepath
-                      , free
                       , inline-c
                       , mtl
                       , text
@@ -126,7 +123,6 @@ Test-Suite spec
                       , directory
                       , exceptions
                       , filepath
-                      , free
                       , hspec
                       , inline-c
                       , mtl
@@ -136,17 +132,15 @@ Test-Suite spec
                       , unix
                       , unix-bytestring
   Other-modules:        System.GPIO
-                      , System.GPIO.Free
                       , System.GPIO.Linux
                       , System.GPIO.Linux.Sysfs
-                      , System.GPIO.Linux.Sysfs.Free
                       , System.GPIO.Linux.Sysfs.IO
                       , System.GPIO.Linux.Sysfs.Monad
                       , System.GPIO.Linux.Sysfs.Mock
                       , System.GPIO.Linux.Sysfs.Mock.Internal
-                      , System.GPIO.Linux.Sysfs.Native
                       , System.GPIO.Linux.Sysfs.Types
                       , System.GPIO.Linux.Sysfs.Util
+                      , System.GPIO.Monad
                       , System.GPIO.Types
 
 Source-Repository head
