Move 'withPin' out of the 'MonadGpio' type class.
Very nice, now there's just a single implementation of it which works
with all interpreters (as long as the underlying monad is an instance of
'MonadMask', of course).

Side note: this illustrates at least 2 reasons why using mtl-style type
classes is an improvement on the 'FreeT' monad transformer approach:

1) With the latter, there was (as far as I could tell) no way to
   implement 'withPin' independent of the DSL, meaning that every
   interpreter had to implement it despite the fact that in most (all?)
   cases, the implementation was essentially going to be the same. I
   believe the reason this was not possible is that, with the free monad
   approach, in order to run the 'openPin' and 'closePin' operations as
   required by 'withPin', the user must explicitly supply the "operation
   dictionary" at the use site via the "run" function of the
   interpreter; meaning that in order to implement 'withPin', you needed
   to know which interpreter was being used (hence, the reason it must
   be defined in the DSL, as it is DSL-specific). With type classes,
   Haskell provides the "operation dictionary" (i.e., the instance
   definition) automatically, so 'withPin' can be implemented generally.

2) We get some nice laws! Because it's implemented in terms of
   'bracket', you can only legally use 'withPin' with your interpreter
   if your transformer stack is an instance of 'MonadMask'. With the
   'FreeT' approach (where 'withPin' was part of the DSL), it was
   all-or-nothing: if your transformer stack could not provide a
   compatible 'bracket'-like function, you could simply not use the GPIO
   DSL with your transformer stack. But with the type class approach,
   because 'withPin' is /not/ part of the type class DSL, you can
   /still/ use the DSL with your transformer even if it doesn't have
   'bracket'-like functionality. (You can't use 'withPin' in that case,
   of course, but you can still use everything els

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -100,6 +100,7 @@ Executable gpio-example
   HS-Source-Dirs:       examples
   Build-Depends:        base ==4.*
                       , async
+                      , exceptions
                       , gpio
                       , mtl
                       , optparse-applicative
